Fixed bottom of page visibility.

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -12,6 +12,7 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
     padding-top: 50px;
+    padding-bottom: 40px;
 }
 
 h1, h2, h3 { color: steelblue; }
